popup alignment and profile dropdown issue

--- a/src/index.css
+++ b/src/index.css
@@ -622,6 +622,7 @@ select.form-control:focus, select.form-control:active, select.form-control:-inte
 }
 .filter-row .MuiFormControl-root, .filter-row .MuiInput-root{
     margin: 0;
+    height: 44px;
 }
 .filter-row .MuiFormControl-root{
     margin-left: 15px;
@@ -644,9 +645,12 @@ select.form-control:focus, select.form-control:active, select.form-control:-inte
 .filter-row .MuiInput-underline:before, .MuiInput-underline:hover:not(.Mui-disabled):before, .MuiInput-underline:after{
     border-bottom: 0 !important;
 }
-.MuiPaper-root{
+#menu- .MuiPaper-root{
     top:290px !important;
 }
+/* .feedback-modal .MuiPaper-root{
+
+} */
 .feedback-close{
     position: absolute !important;
     top: 4px !important;
@@ -826,7 +830,7 @@ select.form-control:focus, select.form-control:active, select.form-control:-inte
 }
 .nav-item>div{
     top: 10px !important;
-    left: 0 !important;
+    left:-58px !important;
 }
 .header_nav .navbar-nav .MuiPaper-root::before{
     content: "";
